# Detectors

./: README.md  pyproject.toml  setup.py
CrakDetectors/: __init__.py
CrakDetectors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/CrakDetectors/: FaceDetector.py  FaceMesh.py  HandDetector.py  PoseDetector.py  Utilz.py  __init__.py
src/CrakDetectors.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
